# HoloBook

./: .gitignore  CMakeLists.txt  HoloBook.cbp  HoloBook.cpp  HoloBook.depend  HoloBook.h  HoloBook.layout  README.md  gitcommitscript.sh
QROpenCVScanDll/: .gitignore  CMakeLists.txt  ImageReaderSource.cpp  ImageReaderSource.h  QROpenCVScanDll.cbp  QROpenCVScanDll.depend  QROpenCVScanDll.layout  main.cpp  main.h
QROpenCVScanDll/zxing/: LuminanceSource.h  MatSource.h  ZXing.h
QROpenCVScanDll/zxing/aztec/: AztecDetectorResult.cpp
QROpenCVScanDll/zxing/qrcode/detector/: AlignmentPatternFinder.cpp  Detector.cpp
